[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Scenes/Room1.gd" type="Script" id=1]
[ext_resource path="res://assets/Tileset/Casino.tres" type="TileSet" id=2]

[node name="Room3" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 13, 9, 4, 14, 9, 5, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 65549, 9, 65539, 65550, 9, 3, 65551, 8, 0, 65552, 8, 0, 65553, 8, 0, 65554, 8, 0, 65555, 8, 0, 65556, 8, 0, 65557, 8, 0, 65558, 8, 0, 65559, 8, 0, 65560, 8, 0, 65561, 8, 0, 65562, 8, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0, 131077, 8, 0, 131078, 8, 0, 131079, 9, 4, 131080, 9, 2, 131081, 9, 2, 131082, 9, 2, 131083, 9, 2, 131084, 9, 2, 131085, 9, 65537, 131086, 9, 65536, 131087, 9, 2, 131088, 9, 2, 131089, 9, 2, 131090, 9, 2, 131091, 9, 2, 131092, 9, 5, 131093, 8, 0, 131094, 8, 0, 131095, 8, 0, 131096, 8, 0, 131097, 8, 0, 131098, 8, 0, 196609, 8, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196614, 9, 4, 196615, 9, 65537, 196616, 9, 6, 196617, 9, 6, 196618, 9, 6, 196619, 9, 6, 196620, 9, 6, 196621, 9, 6, 196622, 9, 6, 196623, 9, 6, 196624, 9, 6, 196625, 9, 6, 196626, 9, 6, 196627, 9, 6, 196628, 9, 65536, 196629, 9, 5, 196630, 8, 0, 196631, 8, 0, 196632, 8, 0, 196633, 8, 0, 196634, 8, 0, 262145, 8, 0, 262146, 8, 0, 262147, 8, 0, 262148, 8, 0, 262149, 8, 0, 262150, 9, 65539, 262151, 9, 6, 262152, 9, 6, 262153, 9, 6, 262154, 9, 6, 262155, 9, 6, 262156, 9, 6, 262157, 9, 6, 262158, 9, 6, 262159, 9, 6, 262160, 9, 6, 262161, 9, 6, 262162, 9, 6, 262163, 9, 6, 262164, 9, 6, 262165, 9, 3, 262166, 8, 0, 262167, 8, 0, 262168, 8, 0, 262169, 8, 0, 262170, 8, 0, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, 327685, 8, 0, 327686, 9, 65539, 327687, 9, 6, 327688, 9, 6, 327689, 9, 6, 327690, 9, 6, 327691, 9, 6, 327692, 9, 6, 327693, 9, 6, 327694, 9, 6, 327695, 9, 6, 327696, 9, 6, 327697, 9, 6, 327698, 9, 6, 327699, 9, 6, 327700, 9, 6, 327701, 9, 3, 327702, 8, 0, 327703, 8, 0, 327704, 8, 0, 327705, 8, 0, 327706, 8, 0, 393217, 8, 0, 393218, 8, 0, 393219, 8, 0, 393220, 8, 0, 393221, 9, 4, 393222, 9, 65537, 393223, 9, 6, 393224, 9, 6, 393225, 9, 6, 393226, 9, 6, 393227, 9, 6, 393228, 9, 6, 393229, 9, 6, 393230, 9, 6, 393231, 9, 6, 393232, 9, 6, 393233, 9, 6, 393234, 9, 6, 393235, 9, 6, 393236, 9, 6, 393237, 9, 65536, 393238, 9, 5, 393239, 8, 0, 393240, 8, 0, 393241, 8, 0, 393242, 8, 0, 458752, 9, 4, 458753, 9, 2, 458754, 9, 2, 458755, 9, 2, 458756, 9, 2, 458757, 9, 65537, 458758, 9, 6, 458759, 9, 6, 458760, 9, 6, 458761, 9, 6, 458762, 9, 6, 458763, 9, 6, 458764, 9, 6, 458765, 9, 6, 458766, 9, 6, 458767, 9, 6, 458768, 9, 6, 458769, 9, 6, 458770, 9, 6, 458771, 9, 6, 458772, 9, 6, 458773, 9, 6, 458774, 9, 65536, 458775, 9, 2, 458776, 9, 2, 458777, 9, 2, 458778, 9, 2, 458779, 9, 5, 524288, 9, 65540, 524289, 9, 65538, 524290, 9, 65538, 524291, 9, 65538, 524292, 9, 65538, 524293, 9, 1, 524294, 9, 6, 524295, 9, 6, 524296, 9, 6, 524297, 9, 6, 524298, 9, 6, 524299, 9, 6, 524300, 9, 6, 524301, 9, 6, 524302, 9, 6, 524303, 9, 6, 524304, 9, 6, 524305, 9, 6, 524306, 9, 6, 524307, 9, 6, 524308, 9, 6, 524309, 9, 6, 524310, 9, 0, 524311, 9, 65538, 524312, 9, 65538, 524313, 9, 65538, 524314, 9, 65538, 524315, 9, 65541, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 9, 65540, 589830, 9, 1, 589831, 9, 6, 589832, 9, 6, 589833, 9, 6, 589834, 9, 6, 589835, 9, 6, 589836, 9, 6, 589837, 9, 6, 589838, 9, 6, 589839, 9, 6, 589840, 9, 6, 589841, 9, 6, 589842, 9, 6, 589843, 9, 6, 589844, 9, 6, 589845, 9, 0, 589846, 9, 65541, 589847, 8, 0, 589848, 8, 0, 589849, 8, 0, 589850, 8, 0, 655361, 8, 0, 655362, 8, 0, 655363, 8, 0, 655364, 8, 0, 655365, 8, 0, 655366, 9, 65539, 655367, 9, 6, 655368, 9, 6, 655369, 9, 6, 655370, 9, 6, 655371, 9, 6, 655372, 9, 6, 655373, 9, 6, 655374, 9, 6, 655375, 9, 6, 655376, 9, 6, 655377, 9, 6, 655378, 9, 6, 655379, 9, 6, 655380, 9, 6, 655381, 9, 3, 655382, 8, 0, 655383, 8, 0, 655384, 8, 0, 655385, 8, 0, 655386, 8, 0, 720897, 8, 0, 720898, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 9, 65539, 720903, 9, 6, 720904, 9, 6, 720905, 9, 6, 720906, 9, 6, 720907, 9, 6, 720908, 9, 6, 720909, 9, 6, 720910, 9, 6, 720911, 9, 6, 720912, 9, 6, 720913, 9, 6, 720914, 9, 6, 720915, 9, 6, 720916, 9, 6, 720917, 9, 3, 720918, 8, 0, 720919, 8, 0, 720920, 8, 0, 720921, 8, 0, 720922, 8, 0, 786433, 8, 0, 786434, 8, 0, 786435, 8, 0, 786436, 8, 0, 786437, 8, 0, 786438, 9, 65540, 786439, 9, 1, 786440, 9, 6, 786441, 9, 6, 786442, 9, 6, 786443, 9, 6, 786444, 9, 6, 786445, 9, 6, 786446, 9, 6, 786447, 9, 6, 786448, 9, 6, 786449, 9, 6, 786450, 9, 6, 786451, 9, 6, 786452, 9, 0, 786453, 9, 65541, 786454, 8, 0, 786455, 8, 0, 786456, 8, 0, 786457, 8, 0, 786458, 8, 0, 851969, 8, 0, 851970, 8, 0, 851971, 8, 0, 851972, 8, 0, 851973, 8, 0, 851974, 8, 0, 851975, 9, 65540, 851976, 9, 65538, 851977, 9, 65538, 851978, 9, 65538, 851979, 9, 65538, 851980, 9, 65538, 851981, 9, 1, 851982, 9, 0, 851983, 9, 65538, 851984, 9, 65538, 851985, 9, 65538, 851986, 9, 65538, 851987, 9, 65538, 851988, 9, 65541, 851989, 8, 0, 851990, 8, 0, 851991, 8, 0, 851992, 8, 0, 851993, 8, 0, 851994, 8, 0, 917505, 8, 0, 917506, 8, 0, 917507, 8, 0, 917508, 8, 0, 917509, 8, 0, 917510, 8, 0, 917511, 8, 0, 917512, 8, 0, 917513, 8, 0, 917514, 8, 0, 917515, 8, 0, 917516, 8, 0, 917517, 9, 65539, 917518, 9, 3, 917519, 8, 0, 917520, 8, 0, 917521, 8, 0, 917522, 8, 0, 917523, 8, 0, 917524, 8, 0, 917525, 8, 0, 917526, 8, 0, 917527, 8, 0, 917528, 8, 0, 917529, 8, 0, 917530, 8, 0, 983053, 9, 65540, 983054, 9, 65541 )

[node name="Foreground" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 11, 0, 1, 12, 0, 2, 12, 0, 3, 12, 0, 4, 12, 0, 5, 12, 0, 6, 12, 0, 7, 12, 0, 8, 12, 0, 9, 12, 0, 10, 12, 0, 11, 12, 0, 12, 12, 0, 15, 12, 0, 16, 12, 0, 17, 12, 0, 18, 12, 0, 19, 12, 0, 20, 12, 0, 21, 12, 0, 22, 12, 0, 23, 12, 0, 24, 12, 0, 25, 12, 0, 26, 12, 0, 27, 13, 0, 65536, 14, 0, 65563, 15, 0, 131072, 14, 0, 131095, 10, 0, 131096, 10, 2, 131099, 15, 0, 196608, 14, 0, 196617, 7, 0, 196618, 7, 0, 196619, 7, 0, 196620, 7, 0, 196621, 7, 0, 196622, 7, 0, 196623, 7, 0, 196624, 7, 0, 196625, 7, 0, 196626, 7, 0, 196630, 5, 0, 196631, 10, 65536, 196632, 10, 65538, 196633, 6, 0, 196635, 15, 0, 262144, 14, 0, 262152, 10, 0, 262153, 10, 1, 262154, 10, 1, 262155, 10, 1, 262156, 10, 1, 262157, 10, 1, 262158, 10, 1, 262159, 10, 1, 262160, 10, 1, 262161, 10, 1, 262162, 10, 1, 262163, 10, 2, 262167, 10, 131072, 262168, 10, 131074, 262171, 15, 0, 327680, 14, 0, 327687, 5, 0, 327688, 10, 65536, 327689, 10, 65537, 327690, 10, 65537, 327691, 10, 65537, 327692, 10, 65537, 327693, 10, 65537, 327694, 10, 65537, 327695, 10, 65537, 327696, 10, 65537, 327697, 10, 65537, 327698, 10, 65537, 327699, 10, 65538, 327700, 6, 0, 327707, 15, 0, 393216, 14, 0, 393223, 5, 0, 393224, 10, 65536, 393225, 10, 65537, 393226, 10, 65537, 393227, 10, 65537, 393228, 10, 65537, 393229, 10, 65537, 393230, 10, 65537, 393231, 10, 65537, 393232, 10, 65537, 393233, 10, 65537, 393234, 10, 65537, 393235, 10, 65538, 393236, 6, 0, 393243, 15, 0, 458759, 5, 0, 458760, 10, 65536, 458761, 10, 65537, 458762, 10, 65537, 458763, 10, 65537, 458764, 10, 65537, 458765, 10, 65537, 458766, 10, 65537, 458767, 10, 65537, 458768, 10, 65537, 458769, 10, 65537, 458770, 10, 65537, 458771, 10, 65538, 458772, 6, 0, 524295, 5, 0, 524296, 10, 65536, 524297, 10, 65537, 524298, 10, 65537, 524299, 10, 65537, 524300, 10, 65537, 524301, 10, 65537, 524302, 10, 65537, 524303, 10, 65537, 524304, 10, 65537, 524305, 10, 65537, 524306, 10, 65537, 524307, 10, 65538, 524308, 6, 0, 589824, 14, 0, 589831, 5, 0, 589832, 10, 65536, 589833, 10, 65537, 589834, 10, 65537, 589835, 10, 65537, 589836, 10, 65537, 589837, 10, 65537, 589838, 10, 65537, 589839, 10, 65537, 589840, 10, 65537, 589841, 10, 65537, 589842, 10, 65537, 589843, 10, 65538, 589844, 6, 0, 589851, 15, 0, 655360, 14, 0, 655367, 5, 0, 655368, 10, 65536, 655369, 10, 65537, 655370, 10, 65537, 655371, 10, 65537, 655372, 10, 65537, 655373, 10, 65537, 655374, 10, 65537, 655375, 10, 65537, 655376, 10, 65537, 655377, 10, 65537, 655378, 10, 65537, 655379, 10, 65538, 655380, 6, 0, 655387, 15, 0, 720896, 14, 0, 720904, 10, 131072, 720905, 10, 131073, 720906, 10, 131073, 720907, 10, 131073, 720908, 10, 131073, 720909, 10, 131073, 720910, 10, 131073, 720911, 10, 131073, 720912, 10, 131073, 720913, 10, 131073, 720914, 10, 131073, 720915, 10, 131074, 720923, 15, 0, 786432, 14, 0, 786433, 5, 0, 786434, 10, 0, 786435, 10, 2, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786459, 15, 0, 851968, 14, 0, 851970, 10, 131072, 851971, 10, 131074, 851972, 1, 0, 851995, 15, 0, 917504, 14, 0, 917506, 1, 0, 917531, 15, 0, 983040, 16, 0, 983041, 17, 0, 983042, 17, 0, 983043, 17, 0, 983044, 17, 0, 983045, 17, 0, 983046, 17, 0, 983047, 17, 0, 983048, 17, 0, 983049, 17, 0, 983050, 17, 0, 983051, 17, 0, 983052, 17, 0, 983055, 17, 0, 983056, 17, 0, 983057, 17, 0, 983058, 17, 0, 983059, 17, 0, 983060, 17, 0, 983061, 17, 0, 983062, 17, 0, 983063, 17, 0, 983064, 17, 0, 983065, 17, 0, 983066, 17, 0, 983067, 18, 0 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 395.2, 164.478 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 350.672, 78.0639 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 88.4118, 191.27 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 351.804, 221.081 )

[node name="Position2D5" type="Position2D" parent="."]
position = Vector2( 55.5821, 62.9697 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 230.185, 128.677 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
